# lib-rs

./: .gitignore  .release-please-manifest.json  AGENTS.md  CLAUDE.md  Cargo.toml  TODO.md  package.json  release-please-config.json
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.husky/: pre-commit  pre-push
crates/_workspace-hack/: Cargo.toml
crates/utils/config-loader/: CHANGELOG.md  Cargo.toml
crates/utils/config-loader/src/: lib.rs
crates/utils/gen-id/: CHANGELOG.md  Cargo.toml
crates/utils/gen-id/src/: lib.rs  metadata.rs
crates/utils/gen-id/src/nanoid/: generator.rs  mod.rs
crates/utils/gen-id/src/uuid/: generator.rs  metadata.rs  mod.rs  parser.rs
crates/utils/http-client/: CHANGELOG.md  Cargo.toml
crates/utils/http-client/src/: builder.rs
crates/utils/http-client/src/middleware/: mod.rs  retry.rs
crates/utils/logger/: CHANGELOG.md  Cargo.toml
crates/utils/logger/src/: config.rs  file.rs  lib.rs  macros.rs  otel.rs  otlp_helpers.rs  sysinfo.rs  util.rs
crates/utils/logger/src/metrics/: config.rs  jemalloc.rs  mod.rs  provider.rs  system.rs
crates/utils/logger/tests/: config_tests.rs  error_tests.rs  integration_tests.rs  runtime_config_tests.rs  util_tests.rs
crates/utils/task-manager/: CHANGELOG.md  Cargo.toml
crates/utils/task-manager/src/: task_manager.rs
lat.md/: architecture.md  lat.md  logger.md
lat.md/.cache/: lat_init.json
plans/: logger-configurability-plan.md
